--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h1 style="display: flex; text-align: center; justify-content: center; font-size: 80px; margin-right: 100px;">Calculator</h1>
         <div class="calculator">
             <form >
                 <div class="display">
